--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -71,7 +71,7 @@ Org-roam provides several benefits over other tooling:
 
 Org-roam is a tool that will appear unfriendly to anyone unfamiliar with Emacs
 and Org-mode, but is also extremely powerful to those willing to put effort in
-mastering the intricacies of the tools. Org-roam stands on the shoulders on
+mastering the intricacies of the tools. Org-roam stands on the shoulders of
 giants. Emacs was first created in 1976, and remains a top tier tool for editing
 text and designing textual interfaces. The malleability of Emacs allowed the
 creation of Org-mode, an all-purpose plain-text system for maintaining TODO
